add popup functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		/>
 		<title>Document</title>
 	</head>
-	<body>
+	<body class="body">
 		<div class="container">
 			<div id="slider">
 				<div class="slide">Slide 1</div>
@@ -25,12 +25,13 @@
 			</div>
 			<button id="prevBtn">Previous</button>
 			<button id="nextBtn">Next</button>
+			<div class="modal">
+				<div class="modal-wrap">Hello, I'm modal</div>
+				<button class="close-btn">close modal</button>
+			</div>
+			<button class="modal-btn">active modal</button>
 		</div>
-		<div class="modal">
-			<div class="modal-wrap">Hello, I'm modal</div>
-			<button class="close-btn">close modal</button>
-		</div>
-		<button class="modal-btn">active modal</button>
+
 		<script src="./main.js"></script>
 	</body>
 </html>
